src/migration/sea_orm/timestamp/snapshots/roadster__migration__timestamp__tests__drop_update_timestamp_function@case_1.snap
---
source: src/migration/timestamp/mod.rs
expression: statement
---
Some(
    Statement {
        sql: "DROP FUNCTION IF EXISTS update_timestamp_updated_at;",
        values: None,
        db_backend: Postgres,
    },
)
